--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 
   "description": "Make youtube less addictive",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Even-Less-Addictive-Youtube",
   "version": "1.00",
   "author":"surajsharma",
@@ -16,14 +16,18 @@
       "js": ["browser-polyfill.js","contentscript.js"]
     }
   ],
-  
-  "action": {
+  "browser_action": {
     "default_icon": "icons/favicon4_144.png",
     "default_title": "Less Addictive Youtube",
     "default_popup": "options/options.html"
   },
   "permissions": [
     "storage"
-  ]
+  ],
+  "browser_specific_settings": {
+  "gecko": {
+    "id": "suraj@evenzero.in"
+  }
+}
 
 }
