--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,26 @@
 {
+    "description": "Make youtube less addictive",
+    "manifest_version": 3,
+    "name": "Even-Less-Addictive-Youtube",
+    "version": "1.0",
+    "author": "surajsharma",
+    "homepage_url": "https://github.com/inversepolarity/Even-Less-Addictive-Youtube",
+    "icons": {
+        "144": "icons/favicon4_144.png"
+    },
 
-  "description": "Make youtube less addictive",
-  "manifest_version": 2,
-  "name": "Even-Less-Addictive-Youtube",
-  "version": "1.00",
-  "author":"surajsharma",
-  "homepage_url": "https://github.com/inversepolarity/Even-Less-Addictive-Youtube",
-  "icons": {
-    "144": "icons/favicon4_144.png"
-  },
+    "content_scripts": [
+        {
+            "matches": ["*://*.youtube.com/*"],
+            "js": ["browser-polyfill.js", "contentscript.js"]
+        }
+    ],
 
-  "content_scripts": [
-    {
-      "matches": ["*://*.youtube.com/*"],
-      "js": ["browser-polyfill.js","contentscript.js"]
-    }
-  ],
+    "action": {
+        "default_icon": "icons/favicon4_144.png",
+        "default_title": "Less Addictive Youtube",
+        "default_popup": "options/options.html"
+    },
 
-  "browser_action": {
-    "default_icon": "icons/favicon4_144.png",
-    "default_title": "Less Addictive Youtube",
-    "default_popup": "options/options.html"
-  },
-
-  "permissions": [
-    "storage"
-  ],
-
-  "browser_specific_settings": {
-  "gecko": {
-    "id": "test@gmail.com"
-  }
-}
+    "permissions": ["storage"]
 }
