--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "description": "Make youtube less addictive",
     "manifest_version": 3,
-    "name": "Even-Less-Addictive-Youtube",
+    "name": "ZenTube",
     "version": "1.0",
     "author": "surajsharma",
     "homepage_url": "https://github.com/inversepolarity/Even-Less-Addictive-Youtube",
