--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
     "content_scripts": [
         {
             "matches": ["*://*.youtube.com/*"],
-            "js": ["browser-polyfill.js", "contentscript.js"]
+            "js": ["browser-polyfill.js", "contentscript.js"],
+            "run_at": "document_start"
         }
     ],
 
