--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
         {
             "matches": ["*://*.youtube.com/*"],
             "js": ["browser-polyfill.js", "contentscript.js"],
-            "run_at": "document_end"
+            "run_at": "document_start"
         }
     ],
 
