web-ext lint warnings

--- a/ff_manifest.json
+++ b/ff_manifest.json
@@ -27,5 +27,5 @@
         "default_popup": "options/options.html"
     },
 
-    "permissions": ["storage", "tabs", "scripting", "activeTab"]
+    "permissions": ["storage", "tabs", "scripting"]
 }
