--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)",
   "scripts": {
-    "build":"web-ext build --source-dir=./src --overwrite-dest -i=promo/ safari/",
-    "build_safari":"xcrun safari-web-extension-converter  --project-location ./src/safari .",
+    "build": "web-ext build --source-dir=./src --overwrite-dest -i=promo/ safari/",
+    "build_safari": "xcrun safari-web-extension-converter  --project-location ./src/safari .",
     "test": "jest --detectOpenHandles"
   },
   "repository": {
@@ -20,6 +20,12 @@
   "homepage": "https://github.com/inversepolarity/ZenTube#readme",
   "devDependencies": {
     "jest": "^29.4.3",
+    "jest-chrome": "^0.8.0",
     "puppeteer": "^19.7.2"
+  },
+  "overrides": {
+    "jest-chrome": {
+      "jest": "$jest"
+    }
   }
 }
