--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)",
   "scripts": {
     "build": "web-ext build --source-dir=./src --overwrite-dest -i=promo/ safari/",
-    "build_safari": "xcrun safari-web-extension-converter  --project-location ./src/safari .",
-    "test": "jest --detectOpenHandles"
+    "build:safari": "xcrun safari-web-extension-converter  --project-location ./src/safari .",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --detectOpenHandles --watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "jest": "^29.4.3",
     "jest-chrome": "^0.8.0",
+    "jest-environment-jsdom": "^29.4.3",
     "puppeteer": "^19.7.2"
   },
   "overrides": {
