--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,32 +1,37 @@
 {
-    "description": "Zen mode for YouTube",
-    "manifest_version": 3,
-    "name": "ZenTube",
-    "version": "1.1.2",
-    "author": "surajsharma",
-    "homepage_url": "https://evenzero.in",
-    "icons": {
-        "144": "icons/favicon4_144.png"
-    },
+  "description": "Zen mode for YouTube",
+  "manifest_version": 3,
+  "name": "ZenTube",
+  "version": "1.1.2",
+  "author": "surajsharma",
+  "homepage_url": "https://evenzero.in",
+  "icons": {
+    "144": "icons/favicon4_144.png"
+  },
 
-    "background": {
-        "service_worker": "background.js"
-    },
+  "background": {
+    "service_worker": "background.js"
+  },
 
-    "content_scripts": [
-        {
-            "matches": ["*://*.youtube.com/*"],
-            "js": ["browser-polyfill.js", "defaultSettings.js", "contentscript.js"],
-            "run_at": "document_start"
-        }
-    ],
+  "content_scripts": [
+    {
+      "matches": ["*://*.youtube.com/*"],
+      "js": [
+        "browser-polyfill.js",
+        "defaultSettings.js",
+        "contentscript.js",
+        "emoji.js"
+      ],
+      "run_at":"document_start"
+    }
+  ],
 
-    "action": {
-        "default_icon": "icons/favicon4_144.png",
-        "default_title": "Zen Mode for Youtube",
-        "default_popup": "options/options.html"
-    },
+  "action": {
+    "default_icon": "icons/favicon4_144.png",
+    "default_title": "Zen Mode for Youtube",
+    "default_popup": "options/options.html"
+  },
 
-    "permissions": ["storage", "tabs", "scripting"],
-    "host_permissions": ["*://*.youtube.com/*"]
+  "permissions": ["storage", "tabs", "scripting", "activeTab"],
+  "host_permissions": ["*://*.youtube.com/*"]
 }
