--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,8 +18,8 @@
       "js": [
         "browser-polyfill.js",
         "defaultSettings.js",
-        "contentscript.js",
-        "emoji.js"
+        "emoji.js",
+        "contentscript.js"
       ],
       "run_at":"document_start"
     }
