--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "zentube",
   "version": "1.0.0",
-  "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)",
+  "description": "Nirvana for YouTube",
   "scripts": {
     "build": "web-ext build --source-dir=./src --overwrite-dest -i=promo/ safari/",
-    "build:safari": "xcrun safari-web-extension-converter  --project-location ./src/safari .",
+    "build:watch": "watchman-make -p '**/*.js' '**/*.html' '**/*.json' --run ./build.sh",
+    "build:safari": "xcrun safari-web-extension-converter --project-location ./src/safari .",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --detectOpenHandles --watch"
   },
@@ -12,8 +13,8 @@
     "type": "git",
     "url": "git+https://github.com/inversepolarity/ZenTube.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["chrome-extension","youtube","zen"],
+  "author": "inversepolarity",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/inversepolarity/ZenTube/issues"
